fix overflow bug

--- a/src/assets/scss/framework/_base.scss
+++ b/src/assets/scss/framework/_base.scss
@@ -12,7 +12,6 @@ $base-h4-font-weight: $global-font-weight-bold;
   @supports (-webkit-mask-image: url()) {
     body:not(.page-resume) {
       position: relative;
-      overflow: hidden;
 
       &::before {
         content: '';
